Change element type size

--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     <div class="unit xs s m-1-2 l-1-2 nearest wrapper island-1-2 push">
       <p class="bold no-italic">Nearest Playgrounds</p>
       <ul class="push list-group island">
-        <li class="bold micro">373</li>
-        <li class="italic micro">Distance</li>
+        <li class="bold">373</li>
+        <li class="italic">Distance</li>
         <li>0.75km</li>
       </ul>
       <ul class="push list-group island">
         <li class="bold micro">1700</li>
-        <li class="italic micro">Distance</li>
+        <li class="italic">Distance</li>
         <li>2.58km</li>
       </ul>
       <ul class="push list-group island">
-        <li class="bold micro">960</li>
-        <li class="italic micro">Distance</li>
+        <li class="bold">960</li>
+        <li class="italic">Distance</li>
         <li>3.03km</li>
       </ul>
     </div>
-    <div class="unit xs s m-1-2 l-1-2 wrapper">
-      <table class="right-text micro island wrapper">
-        <caption class="bold">Playgrounds in the City</caption>
+    <div class="unit xs s m-1-2 l-1-2 wrapper  micro">
+      <table class="right-text island wrapper">
+        <caption class="bold no-italic">Playgrounds in the City</caption>
         <thead class="bold">
           <tr>
             <th class="id" scope="col">Park ID</th>
