--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class"grid">
-    <div class="unit xs s m-1-2 l-1-2 nearest wrapper island-1-2 push">
+    <div class="unit xs s m-1-2 l-1-2 nearest wrapper island-1-2 micro push">
       <p class="bold no-italic">Nearest Playgrounds</p>
       <ul class="push list-group island">
         <li class="bold">373</li>
@@ -33,7 +33,7 @@
         <li>0.75km</li>
       </ul>
       <ul class="push list-group island">
-        <li class="bold micro">1700</li>
+        <li class="bold">1700</li>
         <li class="italic">Distance</li>
         <li>2.58km</li>
       </ul>
