Adjust elements in index

--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
   </div>
   <div class"grid">
     <div class="unit xs s m-1-4 l-1-4 nearest wrapper island-1-2 micro push">
-      <p class="bold no-italic">Nearest Playgrounds</p>
+      <p class="bold no-italic">Nearest playgrounds</p>
       <ul class="push list-group island">
         <li class="bold">373</li>
         <li class="italic">Distance</li>
-        <li>0.75km</li>
+        <li>0.75 km</li>
       </ul>
       <ul class="push list-group island">
         <li class="bold">1700</li>
         <li class="italic">Distance</li>
-        <li>2.58km</li>
+        <li>2.58 km</li>
       </ul>
       <ul class="push list-group island">
         <li class="bold">960</li>
         <li class="italic">Distance</li>
-        <li>3.03km</li>
+        <li>3.03 km</li>
       </ul>
     </div>
     <div class="unit xs s m-3-4 l-3-4 wrapper  micro">
       <table class="right-text island wrapper">
-        <caption class="bold no-italic">Playgrounds in the City</caption>
+        <caption class="bold no-italic">Playgrounds in the city</caption>
         <thead class="bold">
           <tr>
             <th class="id" scope="col">Park ID</th>
-            <th class="park-type" scope="col">Park Type</th>
-            <th class="age" scope="col">Age Group</th>
+            <th class="park-type" scope="col">Park type</th>
+            <th class="age" scope="col">Age group</th>
             <th class="swings" scope="col">Swings</th>
             <th class="slides" scope="col">Slides</th>
             <th class="slides" scope="col">Seesaws</th>
