Adjust elements in search

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <form class="push wrapper">
         <div class="search-engine">
           <img class="search absolute zindex-1000" src="images/search.svg" alt="">
-          <input class="relative" type="search" name="search" value="">
+          <input class="relative" type="Search" name="Search" value="">
         </div>
       </form>
     </div>
