--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </form>
     </div>
   </div>
-  <div class"grid">
+  <div class="grid">
     <div class="unit xs s m-1-4 l-1-4 nearest wrapper island-1-2 micro push">
       <p class="bold no-italic">Nearest playgrounds</p>
       <ul class="push list-group island">
