Add element to class unit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="unit xs s m-1-2 l-1-2 ">
       <img class="logo" src="images/logo.svg" alt="">
     </div>
-    <div class="unit xs s m-1-2 l-1-2 ">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 ">
       <form class="push wrapper">
         <div class="search-engine">
           <img class="search absolute zindex-1000" src="images/search.svg" alt="">
@@ -25,8 +25,8 @@
     </div>
   </div>
   <div class="grid">
-    <div class="unit xs s m-1-4 l-1-4 nearest wrapper island-1-2 micro push">
-      <p class="bold no-italic">Nearest playgrounds</p>
+    <div class="unit xs-1 s-1 m-1-4 l-1-4 nearest wrapper island-1-2 micro push">
+      <h1 class="bold no-italic giga">Nearest playgrounds</h1>
       <ul class="push list-group island">
         <li class="bold">373</li>
         <li class="italic">Distance</li>
@@ -43,7 +43,7 @@
         <li>3.03 km</li>
       </ul>
     </div>
-    <div class="unit xs s m-3-4 l-3-4 wrapper  micro">
+    <div class="unit xs-1 s-1 m-3-4 l-3-4 wrapper micro">
       <table class="right-text island wrapper">
         <caption class="bold no-italic">Playgrounds in the city</caption>
         <thead class="bold">
