Adjust elements in index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
   <div class="grid">
     <form class="unit xs-1 s-1 m-1-4 l-1-4 nearest wrapper island-1-2 micro push">
-      <label class="bold no-italic giga">Nearest playgrounds</label>
+      <label class="bold no-italic giga push">Nearest playgrounds</label>
       <ul class="push list-group island">
         <li class="bold">373</li>
         <li class="italic">Distance</li>
@@ -46,7 +46,7 @@
     </form>
     <div class="unit xs-1 s-1 m-3-4 l-3-4 wrapper micro">
       <table class="right-text island wrapper">
-        <caption class="bold no-italic">Playgrounds in the city</caption>
+        <caption class="bold not-italic giga">Playgrounds in the city</caption>
         <thead class="bold nano">
           <tr>
             <th class="id" scope="col">Park ID</th>
