Correct errors in element logo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <h1 class="hidden">Playground Finder</h1>
-  <div class="grid island">
+  <div class="grid island-1-2">
     <div class="unit xs s m-1-2 l-1-2 ">
-      <img class="logo" src="images/logo.svg" alt="">
+      <img class="logo push-1-2" src="images/logo.svg" alt="">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 ">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 push-0">
       <div class="push wrapper">
         <div class="search-engine">
           <img class="search absolute zindex-1000" src="images/search.svg" alt="">
