Fix errors in index and fix background color in table

--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
     </div>
   </div>
   <div class="grid">
-    <form class="unit xs-1 s-1 m-1-4 l-1-4 nearest wrapper island-1-2 micro push">
-      <label class="bold no-italic giga push">Nearest playgrounds</label>
-      <ul class="push list-group island">
+    <form class="unit xs-1 s-1 m-1-4 l-1-4 nearest wrapper island-1-2 push">
+      <label class="bold no-italic giga push-1-2">Nearest playgrounds</label>
+      <ul class="push list-group island-1-2">
         <li class="bold">373</li>
         <li class="italic">Distance</li>
         <li>0.75 km</li>
       </ul>
-      <ul class="push list-group island">
+      <ul class="push list-group island-1-2">
         <li class="bold">1700</li>
         <li class="italic">Distance</li>
         <li>2.58 km</li>
       </ul>
-      <ul class="push list-group island">
+      <ul class="push list-group island-1-2">
         <li class="bold">960</li>
         <li class="italic">Distance</li>
         <li>3.03 km</li>
       </ul>
     </form>
-    <div class="unit xs-1 s-1 m-3-4 l-3-4 wrapper micro">
-      <table class="right-text island wrapper">
-        <caption class="bold not-italic giga">Playgrounds in the city</caption>
+    <div class="table unit xs-1 s-1 m-3-4 l-3-4 wrapper island-1-2 text-center micro">
+      <table class="right-text island">
+        <caption class="bold not-italic giga pad-t">Playgrounds in the city</caption>
         <thead class="bold nano">
           <tr>
             <th class="id" scope="col">Park ID</th>
